--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   "dependencies": {
     "bootstrap": "5.1.3",
     "bootstrap-vue": "2.21.2",
+    "mitt": "3.0.0",
     "vue": "2.6.14",
-    "vue-router": "^3.0.1"
+    "vue-router": "3.3.4",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/vue-fontawesome": "2.0.6",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
