--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajax": "0.0.4",
+    "axios": "0.24.0",
     "bootstrap": "5.1.3",
     "bootstrap-vue": "2.21.2",
     "mitt": "3.0.0",
