--- a/package.json
+++ b/package.json
@@ -75,5 +75,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "eslintConfig": {
+    "globals": {
+      "kakao": false
+    }
+  }
 }
