--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "mohaemookgi_vue",
   "version": "1.0.0",
+  "private": true,
   "description": "A Vue.js project",
   "author": "jgy4419 <jgy_98@naver.com>",
-  "private": true,
   "scripts": {
+    "build": "node build/build.js",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
-    "build": "node build/build.js"
+    "unit": "jest --config test/unit/jest.conf.js --coverage"
   },
   "dependencies": {
     "ajax": "0.0.4",
@@ -17,6 +17,7 @@
     "bootstrap": "5.1.3",
     "bootstrap-vue": "2.21.2",
     "mitt": "3.0.0",
+    "register-service-worker": "^1.7.1",
     "vue": "2.6.14",
     "vue-router": "3.3.4",
     "vuex": "3.6.2"
@@ -25,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.6",
+    "@vue/cli-plugin-pwa": "4.5.15",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -67,18 +69,18 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+  "eslintConfig": {
+    "globals": {
+      "kakao": false
+    }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
   ],
-  "eslintConfig": {
-    "globals": {
-      "kakao": false
-    }
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
   }
 }
